# ExileCraft

./: .gitignore  CONTRIBUTING.md  ExileCraft.pyproject  LICENSE  Pipfile  README.md  __init__.py  crafting_project.py  craftingsim.py  database_handler.py  databasehandler.py  game_data.py  hotkey_methods.py  item_base_selector.py  item_mod_finder.py  item_mods_retriever.py  item_stats_updater.py  main.py  main_window.py  mainwindow.ui  mainwindow_ui.py  modlist.ui  pyproject.toml  requirements.txt  resources.qrc  setup.py  tray_setup.py  ui_updater.py
.github/workflows/: ExileCraftDeploy.yaml
ExileCraft/: ExileCraft.pyproject  README.md  __init__.py  main.py  settings.json
ExileCraft/ExileCraft/: __init__.py  main.py  qt_core.py  settings.json
ExileCraft/ExileCraft/modules/: __init__.py
ExileCraft/config/: __init__.py
ExileCraft/db/: __init__.py  database_handler.py  item_mods_retriever.py
ExileCraft/docs/: conf.py  index.rst
ExileCraft/emu/: __init__.py
ExileCraft/modules/: __init__.py
ExileCraft/tests/: test_get_base_item_stats.py  test_main.py  test_path_utils.py
ExileCraft/tray/: __init__.py
ExileCraft/ui/: __init__.py  base_selection.py  customcursorbutton.py  item_options.ui  item_selection.py  item_stats_updater.py  landing_page.py  main_window.py  mainwindow_ui.py  resources.qrc  ui_updater.py
data/json/: base_items.json
docs/: conf.py
docs/source/: conf.py  index.rst
game_elements/: __init__.py  advanced_mod.py  base_item.py  cluster_jewel.py  cluster_jewel_notable.py  cost_type.py  crafting_bench_option.py  essence.py  fossil.py  heist_equipment.py  item.py  item_class.py  mod.py  mod_type.py  stat.py  stat_translation.py  tag.py
manifests/: deployment.yaml  service.yaml
tests/: test_get_base_item_stats.py
tests/tray_tests/: hotkey_methods_tests.py
ui/: __init__.py  base_selection.py  customcursorbutton.py  customtreeitem.py  customtreemodel.py  customtreeview.py  customtreewidget.py  item_selection.py  mainwindow.ui  mainwindow_ui.py
(+327 files in other folders)
