[tool.poetry]
name = "exilecraft"
version = "0.1.0"
description = ""
authors = ["Jon Duea <119540897+jmduea@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
keyboard = "^0.13.5"
pytest = "^7.3.1"
sqlalchemy = "^2.0.15"
pyside6 = "^6.5.0"
pyside6-addons = "^6.5.0"
pyside6-essentials = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
